Clean up of YearWidgetTwo to YearWidget

--- a/static/ajax-solr/templates/pagehead.html
+++ b/static/ajax-solr/templates/pagehead.html
@@ -27,7 +27,7 @@
   <script type="text/javascript" src="{{ staticprefix }}/ext/jquery.autocomplete.js"></script>
   <script type="text/javascript" src="{{ staticprefix }}/widgets/AutocompleteWidget.js"></script>
   <script type="text/javascript" src="{{ staticprefix }}/widgets/DualSlider.js"></script>
-  <script type="text/javascript" src="{{ staticprefix }}/widgets/YearWidgetTwo.js"></script>
+  <script type="text/javascript" src="{{ staticprefix }}/widgets/YearWidget.js"></script>
   <script type="text/javascript" src="{{ staticprefix }}/js/date.js"></script>
   <script type="text/javascript" src="{{ staticprefix }}/js/time.js"></script>
   <script type="text/javascript" src="{{ staticprefix }}/js/underscore-min.js"></script>
