--- a/static/ajax-solr/templates/bodybody_publications.html
+++ b/static/ajax-solr/templates/bodybody_publications.html
@@ -25,7 +25,7 @@
 
   <h2>Year of Publication</h2>
   <div id="pubyear"></div>
-  <input type="text" id="pubyear_amount" style="border:0; color:#f6931f; font-weight:bold;" />
+  <span id="pubyear_amount" class="rangevalues"></span>
   
 <div class="clear"></div> 
 <br/>
@@ -60,20 +60,20 @@
   
   <h2>RA</h2>
   <div id="ra"></div>
-  <input type="text" id="ra_amount" style="border:0; color:#f6931f; font-weight:bold;" />
+  <span id="ra_amount" class="rangevalues"></span>
   
   <h2>DEC</h2>
   <div id="dec"></div>
-  <input type="text" id="dec_amount" style="border:0; color:#f6931f; font-weight:bold;" />
+  <span id="dec_amount" class="rangevalues"></span>
   
   <h2>When Observed?</h2>
   <div id="obsvtime"></div>
-  <span type="text" id="obsvtime_amount" style="border:0; color:#f6931f; font-weight:bold;"></span>
+  <span id="obsvtime_amount" class="rangevalues"></span>
   
   <!-- <h2>Exposure Time (ksec)</h2> -->
   <h2>Exposure Time (sec)</h2>
  <div id="exptime"></div>
-  <input type="text" id="exptime_amount" style="border:0; color:#f6931f; font-weight:bold;" />
+  <span id="exptime_amount" class="rangevalues"></span>
   
   <h2>Observation Ids</h2> 
   <div class="tagcloud" id="obsids"></div>
