Exp. time slider now displays ks rather than s

--- a/static/ajax-solr/templates/bodybody_publications.html
+++ b/static/ajax-solr/templates/bodybody_publications.html
@@ -70,9 +70,8 @@
   <div id="obsvtime"></div>
   <span id="obsvtime_amount" class="rangevalues"></span>
   
-  <!-- <h2>Exposure Time (ksec)</h2> -->
-  <h2>Exposure Time (sec)</h2>
- <div id="exptime"></div>
+  <h2>Exposure Time (ksec)</h2>
+  <div id="exptime"></div>
   <span id="exptime_amount" class="rangevalues"></span>
   
   <h2>Observation Ids</h2> 
