The current search constraints are now organized by facet type (e.g. all keywords displayed together)
Experimental; is this more usable than the previous version? The CSS
change is because I think that we will want to visually separate the
individual constraints and I'm not sure "; " is sufficient.

--- a/static/ajax-solr/css/semflow.css
+++ b/static/ajax-solr/css/semflow.css
@@ -331,3 +331,9 @@ span.rangevalues {
     color: #f6931f;
     font-weight: bold;
 }
+
+/*
+ * This is for testing; I think it is probably confusing for the user */
+span.facetvalue:nth-child(odd) {
+    background: #EDEBEC;
+}
