Override CSS from jquery.autocomplete.css to avoid warnings about a missing indicator.gif

--- a/static/ajax-solr/css/semflow.css
+++ b/static/ajax-solr/css/semflow.css
@@ -333,7 +333,14 @@ span.rangevalues {
 }
 
 /*
- * This is for testing; I think it is probably confusing for the user */
+ * This is for testing; I think it is probably confusing for the user
+ */
 span.facetvalue:nth-child(odd) {
     background: #EDEBEC;
+}
+
+/* override the CSS from jquery.autocomplete to remove indicator.gif */
+
+.ac_loading { 
+    background: white; 
 }
