--- a/static/ajax-solr/templates/pagehead.html
+++ b/static/ajax-solr/templates/pagehead.html
@@ -1,7 +1,6 @@
 <head> 
   <title>{{pagetype}}</title> 
-  <link rel="stylesheet" type="text/css" href="{{ staticprefix }}/css/semflow.css" media="screen" /> 
-  <!--script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/jquery/1.3.2/jquery.min.js"></script-->
+ <!--script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/jquery/1.3.2/jquery.min.js"></script-->
 <script type="text/javascript" src="{{ staticprefix }}/ext/jquery-1.4.2.min.js"></script>
 <!--script type="text/javascript" src="js/jquery.ui.ipad.js"></script-->
   <script type="text/javascript" src="{{ staticprefix }}/js/semflow.js"></script> 
@@ -40,6 +39,9 @@
   <link rel="stylesheet" href="{{ staticprefix }}/ext/jquery.tablesorter/themes/blue/style.css" type="text/css" media="print, projection, screen" />
 
 <!--script type="text/javascript" src="../../Projects/ajax-solr/helpers/jquery/ajaxsolr.theme.js"></script-->
+
+  <!-- add it last so we can over-ride other stylesheets -->
+  <link rel="stylesheet" type="text/css" href="{{ staticprefix }}/css/semflow.css" media="screen" /> 
 
 
 </head>
