Save to myADS now uses bibcodes directly rather than the document id (following changeset fba133ecd0ffab682c2ed7f371adcda44a1c769b)

--- a/static/ajax-solr/templates/bodybody_saved.html
+++ b/static/ajax-solr/templates/bodybody_saved.html
@@ -142,12 +142,12 @@ function getSearchAsBibTex(form) {
 
 function saveToMyADS(form) {
   var data = [];
-  $(form).find('input[type=checkbox]').each(function() {
-    if (this.checked) { data.push(this.value) };
+  $(form).find('input[type=checkbox][checked|=true]').parent().nextAll('td.bibcode').each(function() {
+    data.push($(this).text());
   });
  if (data.length == 0) { return false; }
  $.fancybox.showActivity();
- $.post(SITEPREFIX+'/savepubstomyads', JSON.stringify({'docids':data}),
+ $.post(SITEPREFIX+'/savepubstomyads', JSON.stringify({'bibcodes':data}),
   function(resp) { $.fancybox('<pre>'+resp+'</pre>'); });
  return false;
 }
