--- a/static/ajax-solr/templates/pagehead.html
+++ b/static/ajax-solr/templates/pagehead.html
@@ -3,8 +3,9 @@
  <!--script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/jquery/1.3.2/jquery.min.js"></script-->
 <script type="text/javascript" src="{{ staticprefix }}/ext/jquery-1.4.2.min.js"></script>
 <!--script type="text/javascript" src="js/jquery.ui.ipad.js"></script-->
+  <script type="text/javascript" src="{{ staticprefix }}/js/semflow-core.js"></script> 
   <script type="text/javascript" src="{{ staticprefix }}/js/semflow-{{pagetype}}.js"></script> 
-  <script type="text/javascript" src="{{ staticprefix }}/ajax-solr/core/Core.js"></script>
+ <script type="text/javascript" src="{{ staticprefix }}/ajax-solr/core/Core.js"></script>
   <script type="text/javascript" src="{{ staticprefix }}/ajax-solr/core/AbstractManager.js"></script>
   <script type="text/javascript" src="{{ staticprefix }}/ajax-solr/managers/Manager.jquery.js"></script>
   <script type="text/javascript" src="{{ staticprefix }}/ajax-solr/core/Parameter.js"></script>
