--- a/static/ajax-solr/templates/pagehead.html
+++ b/static/ajax-solr/templates/pagehead.html
@@ -4,7 +4,7 @@
   <!--script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/jquery/1.3.2/jquery.min.js"></script-->
 <script type="text/javascript" src="{{ staticprefix }}/ext/jquery-1.4.2.min.js"></script>
 <!--script type="text/javascript" src="js/jquery.ui.ipad.js"></script-->
-  <script type="text/javascript" src="{{ staticprefix }}/js/semflow.js"></script> 
+  <script type="text/javascript" src="{{ staticprefix }}/js/semflow.{{pageclass}}.js"></script> 
   <script type="text/javascript" src="{{ staticprefix }}/ajax-solr/core/Core.js"></script>
   <script type="text/javascript" src="{{ staticprefix }}/ajax-solr/core/AbstractManager.js"></script>
   <script type="text/javascript" src="{{ staticprefix }}/ajax-solr/managers/Manager.jquery.js"></script>
@@ -12,8 +12,8 @@
   <script type="text/javascript" src="{{ staticprefix }}/ajax-solr/core/ParameterStore.js"></script>
   <script type="text/javascript" src="{{ staticprefix }}/ajax-solr/core/ParameterHashStore.js"></script>
   <script type="text/javascript" src="{{ staticprefix }}/ajax-solr/core/AbstractWidget.js"></script> 
-  <script type="text/javascript" src="{{ staticprefix }}/widgets/ResultWidget.2.0.js"></script> 
-  <script type="text/javascript" src="{{ staticprefix }}/js/reuters.theme.js"></script>
+  <script type="text/javascript" src="{{ staticprefix }}/widgets/{{pageclass}}.ResultWidget.2.0.js"></script> 
+  <script type="text/javascript" src="{{ staticprefix }}/js/{{pageclass}}.theme.js"></script>
   <script type="text/javascript" src="{{ staticprefix }}/ajax-solr/widgets/jquery/PagerWidget.js"></script>
   <script type="text/javascript" src="{{ staticprefix }}/ajax-solr/core/AbstractFacetWidget.js"></script>
   <script type="text/javascript" src="{{ staticprefix }}/widgets/TagcloudWidget.js"></script>
