--- a/static/ajax-solr/templates/bodyhead.html
+++ b/static/ajax-solr/templates/bodyhead.html
@@ -22,8 +22,12 @@
   		<!--h2>With RDF, Faceting, Objects, Data, and SOLR, Oh My!</h2--> 
             </td><td valign="top" align="left">
 
-	 		<span valign="top"><a
-	 		id="loginhref">login</a>&nbsp;|&nbsp;<a id="logouthref">logout</a></span><br/><br/>
+	      <span valign="top">
+	      <a id="loginhref" style="display: none">login</a>
+	      <a id="logouthref" style="display: none">logout</a>
+	      </span>
+	      <br/>
+	      <br/>
 
 	 		
             <!--/td><td valign="bottom"-->
