Moved javascript from template to external file for saved page (finishing off commit c24c77fa0bf23035537258111d55d198527fad84)

--- a/static/ajax-solr/templates/bodybody_saved.html
+++ b/static/ajax-solr/templates/bodybody_saved.html
@@ -85,155 +85,14 @@
     </div>
 {{/notloggedin}}
     
-	<!-- I assume this is a sensible time to add the handlers -->
 	<script type='text/javascript'>
-function changeAllButtons(form, newstate) {
-  $(form).find('input[type=checkbox]').each(function() { this.checked = newstate; });
-}
-
-// var fancyboxOpts = { 'autoDimensions': false, 'width': 1024, 'height': 768 };
-
-function getAsBibTex(form) {
-  var data = [];
-  // could use input:checked but I think I read that there may
-  // be issues, so use the more explicit version.
- $(form).find('input[type=checkbox][checked|=true]').parent().nextAll('td.bibcode').each(function() {
- data.push($(this).text());
-   });
- if (data.length == 0) { return false; }
- $.fancybox.showActivity();
-   doADSproxy('/cgi-bin/nph-bib_query?data_type=BIBTEX&' +
-               data.map(encodeURIComponent).join('&'),
-               function (resp) { $.fancybox('<pre>'+resp+'</pre>'); });
- return false;
-}
-
-// For now only support one search
-function getSearchAsBibTex(form) {
-  var data = [];
-  $(form).find('input[type=checkbox][checked|=true]').each(function() {
-    data.push(this.value);
-  });
-  if (data.length == 0) { return false; }
-  else if (data.length > 1) {
-    alert("Only 1 search can be retrieved as BibTex at a time (you selected " + data.length + ")");
-    return false;
-  }
-  $.fancybox.showActivity();
-
- var query = SOLRURL + 'select?' + data[0] +
-        '&fl=bibcode' +
-        '&wt=json&json.wrf=?';
-
-  $.getJSON(query, function (response) {
-     if (response.response.numFound === 0) {
-        $.fancybox.hideActivity();
-        alert("No publications found for this search.");
-        return false;
-      }
-      var bibcodes = [];
-      for (var i = 0, n = response.response.docs.length; i < n; i++) {
-        bibcodes.push(response.response.docs[i].bibcode);
-      }
-     doADSproxy('/cgi-bin/nph-bib_query?data_type=BIBTEX&' +
-          bibcodes.map(encodeURIComponent).join('&'),
-          function (resp) { $.fancybox('<pre>'+resp+'</pre>'); });
-      return false;
-    });
-
-}
-
-function saveToMyADS(form) {
-  var data = [];
-  $(form).find('input[type=checkbox][checked|=true]').parent().nextAll('td.bibcode').each(function() {
-    data.push($(this).text());
-  });
- if (data.length == 0) { return false; }
- $.fancybox.showActivity();
- doADSproxy('/cgi-bin/nph-abs_connect?library=Add&' +
-     data.map(function (item) { return 'bibcode=' +
-     encodeURIComponent(item); }).join('&'),
-     function(resp) { $.fancybox(resp); });  
-     
- return false;
-}
-   
-function saveSearchToMyADS(form) {
-  var data = [];
-  $(form).find('input[type=checkbox][checked|=true]').each(function() {
-    data.push(this.value);
-  });
-  if (data.length == 0) { return false; }
-  else if (data.length > 1) {
-    alert("Only 1 search can be retrieved as BibTex at a time (you selected " + data.length + ")");
-    return false;
-  }
-  $.fancybox.showActivity();
-
- var query = SOLRURL + 'select?' + data[0] +
-        '&fl=bibcode' +
-        '&wt=json&json.wrf=?';
-
-  $.getJSON(query, function (response) {
-     if (response.response.numFound === 0) {
-        $.fancybox.hideActivity();
-        alert("No publications found for this search.");
-        return false;
-      }
-      var bibcodes = [];
-      for (var i = 0, n = response.response.docs.length; i < n; i++) {
-        bibcodes.push(response.response.docs[i].bibcode);
-      }
-    doADSproxy('/cgi-bin/nph-abs_connect?library=Add&' +
-       bibcodes.map(function (item) { return 'bibcode=' +
-       encodeURIComponent(item); }).join('&'),
-       function(resp) { $.fancybox(resp); });
-     return false;
-  });
-}
-
-// relying on SITEPREFIX being in scope
-
-function submitAction(path, idname) {
-    return function() {
-      var data = [];
-      $(this).find('input[type=checkbox]').each(function() {
-        if (this.checked) { data.push(this.value); }
-      });
-      if (data.length == 0) { return false; }
-      var map = { "action": "delete" };
-      map[idname] = data;
-      $.post(SITEPREFIX+path, JSON.stringify(map), function(resp) {
-        // reload on success or error
-        window.location.reload();
-      });
-    };
-}
-
-$('#saved-searches-form').submit(submitAction('/deletesearches', 'searchid'));
-$('#saved-pubs-form').submit(submitAction('/deletepubs', 'pubid'));
-
-    // Use the actual time value to sort the time column rather than
-    // the text, and the text for the other columns. a bit ugly
-    //
-var tsortopts = {
-  headers: { 0: { sorter: false } },
-  textExtraction: function(node) {
-     var val = $(node).find('span').attr('value');
-    if (val === undefined) {
-        return $(node).text();
-      } else {
-        return val;
-      }
-   }
- }
-    
 {{#hassearches}}
-$('#saved-searches-table').tablesorter(tsortopts);
+$('#saved-searches-form').submit(submitDeleteAction('/deletesearches', 'searchid'));
+setupSortedTable('#saved-searches-table');
 {{/hassearches}}
 {{#haspubs}}
-$('#saved-pubs-table').tablesorter(tsortopts);
+$('#saved-pubs-form').submit(submitDeleteAction('/deletepubs', 'pubid'));
+ setupSortedTable('#saved-pubs-table');
 {{/haspubs}}
-   
 	</script>
 </div>
