Mustache tag name change: pagetype to pageclass to match databranch
I am retaining the pagetitle tag name as the title of the page rather
than the databranch's use of pagetype.

--- a/static/ajax-solr/templates/pagehead.html
+++ b/static/ajax-solr/templates/pagehead.html
@@ -41,8 +41,8 @@
 <!--script type="text/javascript" src="../../Projects/ajax-solr/helpers/jquery/ajaxsolr.theme.js"></script-->
 
   <!-- add last so we can over-ride other stylesheets -->
-  <script type="text/javascript" src="{{ staticprefix }}/js/semflow-{{pagetype}}.js"></script> 
-  <script type="text/javascript" src="{{ staticprefix }}/js/semflow-{{pagetype}}.theme.js"></script>
+  <script type="text/javascript" src="{{ staticprefix }}/js/semflow-{{pageclass}}.js"></script> 
+  <script type="text/javascript" src="{{ staticprefix }}/js/semflow-{{pageclass}}.theme.js"></script>
   <link rel="stylesheet" type="text/css" href="{{ staticprefix }}/css/semflow.css" media="screen" /> 
 
 
