--- a/static/ajax-solr/templates/pagehead.html
+++ b/static/ajax-solr/templates/pagehead.html
@@ -3,7 +3,7 @@
  <!--script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/jquery/1.3.2/jquery.min.js"></script-->
 <script type="text/javascript" src="{{ staticprefix }}/ext/jquery-1.4.2.min.js"></script>
 <!--script type="text/javascript" src="js/jquery.ui.ipad.js"></script-->
-  <script type="text/javascript" src="{{ staticprefix }}/js/semflow-core.js"></script> 
+  <script type="text/javascript" src="{{ staticprefix }}/js/semflow.core.js"></script> 
  <script type="text/javascript" src="{{ staticprefix }}/ajax-solr/core/Core.js"></script>
   <script type="text/javascript" src="{{ staticprefix }}/ajax-solr/core/AbstractManager.js"></script>
   <script type="text/javascript" src="{{ staticprefix }}/ajax-solr/managers/Manager.jquery.js"></script>
@@ -41,8 +41,8 @@
 <!--script type="text/javascript" src="../../Projects/ajax-solr/helpers/jquery/ajaxsolr.theme.js"></script-->
 
   <!-- add last so we can over-ride other stylesheets -->
-  <script type="text/javascript" src="{{ staticprefix }}/js/semflow-{{pageclass}}.js"></script> 
-  <script type="text/javascript" src="{{ staticprefix }}/js/semflow-{{pageclass}}.theme.js"></script>
+  <script type="text/javascript" src="{{ staticprefix }}/js/semflow.{{pageclass}}.js"></script> 
+  <script type="text/javascript" src="{{ staticprefix }}/js/semflow.{{pageclass}}.theme.js"></script>
   <link rel="stylesheet" type="text/css" href="{{ staticprefix }}/css/semflow.css" media="screen" /> 
 
 
