Saved page template no-longer uses notloggedin mustache tag.
I have introduced the userloggedin and userloggedout CSS classes that
are hidden/displayed when a user is logged in/out automatically by
semflow.core.

--- a/static/ajax-solr/templates/bodyhead.html
+++ b/static/ajax-solr/templates/bodyhead.html
@@ -23,8 +23,8 @@
             </td><td valign="top" align="left">
 
 	      <span valign="top">
-	      <a id="loginhref" style="display: none">login</a>
-	      <a id="logouthref" style="display: none">logout</a>
+	      <a id="loginhref" class="userloggedout" style="display: none;">login</a>
+	      <a id="logouthref" class="userloggedin" style="display: none;">logout</a>
 	      </span>
 	      <br/>
 	      <br/>
