The 'log in' text on the saved search page is now a link.
We now use a CSS class selector (a.userlogin) rather than ID
(a#loginhref) to add in click handlers for the log in functionality. We
still only support a single log out button, but this could be changed
easily if needed.

--- a/static/ajax-solr/templates/bodybody_saved.html
+++ b/static/ajax-solr/templates/bodybody_saved.html
@@ -1,8 +1,7 @@
 <div class="full"> 
 
 <div style="display: none;" class="userloggedout">
-  <!-- TODO: make 'log in' be a link. -->
-  Please log in to see your saved items.
+ Please <a class="userlogin" href="#">log in</a> to see your saved items.
 </div>
   
 <div style="display: none;" class="userloggedin">
