--- a/static/ajax-solr/templates/bodyhead.html
+++ b/static/ajax-solr/templates/bodyhead.html
@@ -23,7 +23,7 @@
             </td><td valign="top" align="left">
 
 	      <span valign="top">
-	      <a id="loginhref" class="userloggedout" style="display: none;">login</a>
+	      <a id="loginhref" class="userlogin userloggedout" style="display: none;">login</a>
 	      <a id="logouthref" class="userloggedin" style="display: none;">logout</a>
 	      </span>
 	      <br/>
