Make login/out and Go links be displayed with the correct pointer on hover
For some reason the login/out and Go links in the header act as if the
cursor style was set to text; we work around this by explicitly setting
the style to pointer to match the other links. This should be considered
to be a hack as I am not sure why we were getting the previous behavior.

--- a/static/ajax-solr/templates/bodyhead.html
+++ b/static/ajax-solr/templates/bodyhead.html
@@ -9,7 +9,8 @@
             </a-->
             <h1 class="title">AstroExplorer&nbsp;<sup>&alpha;:1</sup></h1>
             </td><td align="left"> 
-            <h1 id="pagetitle"><span id="searchbig"><input type="text" id="querybig" name="query"/>&nbsp;&nbsp;<a class="go" id="gosearch">Go</a></span></h1><br/>
+            <h1 id="pagetitle"><span id="searchbig"><input type="text"
+	id="querybig" name="query"/>&nbsp;&nbsp;<a class="go" id="gosearch" style="cursor: pointer;">Go</a></span></h1><br/>
             <!--h1 id="pagetitle">Prototype ADSLabs/VAO Semantic Browser</h1><br/-->
             <div>
                 <!--span class="tab {{isitchosensearch}}"><a href="/explorer/search">Search</a></span-->
@@ -23,8 +24,10 @@
             </td><td valign="top" align="left">
 
 	      <span valign="top">
-	      <a id="loginhref" class="userlogin userloggedout" style="display: none;">login</a>
-	      <a id="logouthref" class="userloggedin" style="display: none;">logout</a>
+	      <a id="loginhref" class="userlogin userloggedout"
+	      style="display: none; cursor: pointer;">login</a>
+	      <a id="logouthref" class="userloggedin"
+	      style="display: none; cursor: pointer;">logout</a>
 	      </span>
 	      <br/>
 	      <br/>
