Removed 2.0 from ResultWidget file names

--- a/static/ajax-solr/templates/pagehead.html
+++ b/static/ajax-solr/templates/pagehead.html
@@ -13,7 +13,7 @@
   <script type="text/javascript" src="{{ staticprefix }}/widgets/AstroExplorerStore.js"></script>
   <script type="text/javascript" src="{{ staticprefix }}/ajax-solr/core/AbstractWidget.js"></script>
 {{#haswidgets}}
-  <script type="text/javascript" src="{{ staticprefix }}/widgets/{{ pageclass }}.ResultWidget.2.0.js"></script>
+  <script type="text/javascript" src="{{ staticprefix }}/widgets/{{ pageclass }}.ResultWidget.js"></script>
 {{/haswidgets}}
   <script type="text/javascript" src="{{ staticprefix }}/ajax-solr/widgets/jquery/PagerWidget.js"></script>
   <script type="text/javascript" src="{{ staticprefix }}/ajax-solr/core/AbstractFacetWidget.js"></script>
