--- a/static/ajax-solr/templates/pagehead.html
+++ b/static/ajax-solr/templates/pagehead.html
@@ -43,7 +43,7 @@
 <!--script type="text/javascript" src="../../Projects/ajax-solr/helpers/jquery/ajaxsolr.theme.js"></script-->
 
   <!-- add last so we can over-ride other stylesheets -->
-  <script type="text/javascript" src="{{ staticprefix }}/js/semflow.{{pageclass}}.js"></script> 
+  <script type="text/javascript" src="{{ staticprefix }}/js/{{pageclass}}.js"></script> 
   <script type="text/javascript" src="{{ staticprefix }}/js/{{pageclass}}.theme.js"></script>
   <link rel="stylesheet" type="text/css" href="{{ staticprefix }}/css/semflow.css" media="screen" /> 
 
