xhtml span specifications causes problem; fixed obsv template to look like pub. This is a hack, fix by dtd

--- a/static/ajax-solr/templates/bodybody_observations.html
+++ b/static/ajax-solr/templates/bodybody_observations.html
@@ -35,31 +35,31 @@
   
   <h2>RA</h2>
   <div id="ra"></div>
-  <span id="ra_amount" class="rangevalues"/>
+  <span id="ra_amount" class="rangevalues"></span>
   
   <h2>DEC</h2>
   <div id="dec"></div>
-  <span id="dec_amount" class="rangevalues"/>
+  <span id="dec_amount" class="rangevalues"></span>
   
   <h2>FOV</h2>
   <div id="fov"></div>
-  <span id="fov_amount" class="rangevalues"/>
+  <span id="fov_amount" class="rangevalues"></span>
 
   <h2>Resolution</h2>
   <div id="resolution"></div>
-  <span id="resolution_amount" class="rangevalues"/>
+  <span id="resolution_amount" class="rangevalues"></span>
 
   <h2>Time Resolution</h2>
   <div id="t_resolution"></div>
-  <span id="t_resolution_amount" class="rangevalues"/>
+  <span id="t_resolution_amount" class="rangevalues"></span>
 
   <h2>When Observed?</h2>
   <div id="obsvtime"></div>
-  <span id="obsvtime_amount" class="rangevalues"/>
+  <span id="obsvtime_amount" class="rangevalues"></span>
   
   <h2>Exposure Time (ksec)</h2>
   <div id="exptime"></div>
-  <span id="exptime_amount" class="rangevalues"/>
+  <span id="exptime_amount" class="rangevalues"></span>
   
   <!--h2>Observation Ids</h2> 
   <div class="tagcloud" id="obsids"></div>
@@ -82,7 +82,7 @@
 
   <h2>Year of Publication</h2>
   <div id="pubyear"></div>
-  <span id="pubyear_amount" class="rangevalues"/>
+  <span id="pubyear_amount" class="rangevalues"></span>
   
 <div class="clear"></div> 
 <br/>
